feat: Adopt Next.js for framework integration
Integrates Next.js into the project, leveraging its features and conventions for a more robust application structure. This change involves updating dependencies, configuration files, and applying the "use client" directive to components that require client-side interactivity.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
     "path": "https://esm.sh/path@^0.12.7",
     "fs": "https://esm.sh/fs@^0.0.1-security",
-    "@netlify/functions": "https://esm.sh/@netlify/functions@^5.1.2"
+    "@netlify/functions": "https://esm.sh/@netlify/functions@^5.1.2",
+    "next/": "https://esm.sh/next@^16.1.4/",
+    "next": "https://esm.sh/next@^16.1.4"
   }
 }
 </script>
