--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
     "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
     "path": "https://esm.sh/path@^0.12.7",
     "fs": "https://esm.sh/fs@^0.0.1-security",
-    "@netlify/functions": "https://esm.sh/@netlify/functions@^5.1.2",
-    "next/": "https://esm.sh/next@^16.1.4/",
-    "next": "https://esm.sh/next@^16.1.4"
+    "@netlify/functions": "https://esm.sh/@netlify/functions@^5.1.2"
   }
 }
 </script>
